--- a/package.json
+++ b/package.json
@@ -49,9 +49,10 @@
     "restoreMocks": true
   },
   "dependencies": {
-    "apollo-server": "^2.2.5",
     "bcrypt": "^3.0.2",
     "cuid": "^2.1.4",
+    "express": "^4.17.1",
+    "express-graphql": "^0.9.0",
     "graphql": "^14.0.2",
     "graphql-import": "^0.7.1",
     "graphql-tools": "^4.0.3",
