--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "restoreMocks": true
   },
   "dependencies": {
-    "bcrypt": "^3.0.2",
+    "cors": "^2.8.5",
     "cuid": "^2.1.4",
     "express": "^4.17.1",
     "express-graphql": "^0.9.0",
@@ -57,7 +57,9 @@
     "graphql-import": "^0.7.1",
     "graphql-tools": "^4.0.3",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "mongoose": "^5.3.14",
+    "mssql": "^5.1.0",
     "validator": "^10.9.0"
   }
 }
